--- a/angular/package.json
+++ b/angular/package.json
@@ -29,11 +29,13 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^8.7.3",
+    "node-sass": "^4.11.0",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.5",
     "@angular/cli": "^6.0.7",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
@@ -48,10 +50,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.6"
+    "typescript": "~2.7.2"
   }
 }
